@startuml
skinparam classAttributeIconSize 0
title AIStyleHub Domain Model

package Common {
  class User {
    id: String
    email: String
    password: String
    name: String
    avatarUrl: String
    role: UserRole
    tokenBalance: Int
    createdAt: DateTime
    updatedAt: DateTime
  }
  enum UserRole {
    ADMIN
    USER
    SELLER
  }
}

package Commerce {
  class Shop {
    id: String
    name: String
    slug: String
    logoUrl: String
    bannerUrl: String
    avatarImage: String
    description: String
    address: String
    phone: String
    email: String
    website: String
    openingHours: Json
    policies: Json
    socialMedia: Json
    status: ShopStatus
    averageRating: Float
    totalSales: Int
    totalProducts: Int
    featured: Boolean
    ownerId: String
    createdAt: DateTime
    updatedAt: DateTime
  }
  enum ShopStatus {
    PENDING
    ACTIVE
    SUSPENDED
  }

  class Category {
    id: String
    name: String
    slug: String
    imageUrl: String
    parentId: String
    createdAt: DateTime
    updatedAt: DateTime
  }

  class Product {
    id: String
    title: String
    description: String
    shortDescription: String
    images: Json
    basePrice: Decimal
    salePrice: Decimal
    sku: String
    stockQuantity: Int
    weight: Decimal
    dimensions: Json
    material: String
    brand: String
    tags: Json
    specifications: Json
    features: Json
    shippingInfo: Json
    warranty: String
    returnPolicy: String
    status: ProductStatus
    isFeatured: Boolean
    isNew: Boolean
    viewCount: Int
    rating: Float
    reviewCount: Int
    shopId: String
    categoryId: String
    createdAt: DateTime
    updatedAt: DateTime
  }
  enum ProductStatus {
    DRAFT
    PUBLISHED
    ARCHIVED
  }

  class ProductVariant {
    id: String
    productId: String
    name: String
    price: Decimal
    stock: Int
    sku: String
    attributes: Json
    createdAt: DateTime
    updatedAt: DateTime
  }

  class Review {
    id: String
    rating: Int
    comment: String
    images: Json
    userId: String
    productId: String
    shopId: String
    orderId: String
    createdAt: DateTime
    updatedAt: DateTime
  }

  class Order {
    id: String
    buyerId: String
    shopId: String
    totalAmount: Decimal
    shippingAddress: Json
    status: OrderStatus
    paymentStatus: PaymentStatus
    createdAt: DateTime
    updatedAt: DateTime
  }
  enum OrderStatus {
    PENDING
    PROCESSING
    SHIPPED
    DELIVERED
    CANCELLED
  }
  enum PaymentStatus {
    UNPAID
    PAID
    REFUNDED
  }

  class OrderItem {
    id: String
    orderId: String
    productId: String
    productVariantId: String
    quantity: Int
    price: Decimal
    createdAt: DateTime
    updatedAt: DateTime
  }
}

package Tokens {
  class Transaction {
    id: String
    userId: String
    amount: Decimal
    type: TransactionType
    status: TransactionStatus
    description: String
    createdAt: DateTime
    updatedAt: DateTime
  }
  enum TransactionType {
    DEPOSIT
    PURCHASE
    REFUND
  }
  enum TransactionStatus {
    PENDING
    SUCCESS
    FAILED
  }

  class TokenPurchase {
    id: String
    userId: String
    paypalOrderId: String
    amount: Decimal
    tokens: Int
    status: TokenPurchaseStatus
    createdAt: DateTime
  }
  enum TokenPurchaseStatus {
    pending
    completed
    failed
  }

  class CostTracking {
    id: String
    userId: String
    service: String
    operation: String
    cost: Int
    details: String
    createdAt: DateTime
  }
}

package VirtualModeling {
  class VirtualModel {
    id: String
    userId: String
    sessionId: String
    avatarName: String
    avatarImage: String
    isPublic: Boolean
    height: Float
    weight: Float
    gender: String
    hairColor: String
    hairStyle: String
    bodyShape: String
    skinTone: String
    eyeColor: String
    faceShape: String
    beardStyle: String
    tattoos: String
    piercings: String
    clothingStyle: String
    accessories: String
    footwearType: String
    colorPalette: String
    ageAppearance: Int
    bodyProportionPreset: String
    muscleLevel: Int
    fatLevel: Int
    shoulderWidth: Float
    waistSize: Float
    hipSize: Float
    legLength: Float
    createdAt: DateTime
    updatedAt: DateTime
  }
}

package Blog {
  class BlogPost {
    id: String
    authorId: String
    shopId: String
    title: String
    slug: String
    excerpt: String
    content: String
    featuredImage: String
    media: Json
    category: String
    tags: Json
    status: BlogPostStatus
    isFeatured: Boolean
    readingTime: Int
    seoTitle: String
    seoDescription: String
    seoKeywords: String
    likesCount: Int
    savesCount: Int
    commentsCount: Int
    viewCount: Int
    publishedAt: DateTime
    createdAt: DateTime
    updatedAt: DateTime
  }
  enum BlogPostStatus {
    DRAFT
    PUBLISHED
    ARCHIVED
  }

  class BlogComment {
    id: String
    postId: String
    userId: String
    content: String
    media: Json
    createdAt: DateTime
    updatedAt: DateTime
  }

  class BlogLike {
    id: String
    postId: String
    userId: String
    createdAt: DateTime
  }

  class BlogSave {
    id: String
    postId: String
    userId: String
    createdAt: DateTime
  }
}

User "1" -- "0..1" Shop : owner
Shop "1" -- "0..*" Product
Shop "1" -- "0..*" Order
Shop "1" -- "0..*" Review
Shop "1" -- "0..*" BlogPost

Review "1" -- "1" User

Category "1" -- "0..*" Product
Category "0..1" -- "0..*" Category : children

Product "1" -- "0..*" ProductVariant
Product "1" -- "0..*" Review
Product "1" -- "0..*" OrderItem
Order "1" -- "1..*" OrderItem
Order "1" -- "0..1" Review
Order "1" -- "1" Shop
Order "1" -- "1" User : buyer

OrderItem "1" -- "1" Product
OrderItem "0..1" -- "1" ProductVariant

Transaction "0..*" -- "1" User
TokenPurchase "0..*" -- "1" User
CostTracking "0..*" -- "0..1" User

VirtualModel "0..*" -- "0..1" User

BlogPost "1" -- "0..*" BlogComment
BlogPost "1" -- "0..*" BlogLike
BlogPost "1" -- "0..*" BlogSave
BlogPost "0..1" -- "1" Shop
BlogPost "1" -- "1" User : author

BlogComment "1" -- "1" User
BlogLike "1" -- "1" User
BlogSave "1" -- "1" User

@enduml
